# Mprpc

./: CMakeLists.txt  README.md  autobuild.sh
example/: friend.pb.cc  friend.pb.h  friend.proto  user.proto
example/callee/: CMakeLists.txt  friendsservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  mprpccontroller.h  rpcprovider.h  zookeeperutil.h
test/: main  proto.cpp  test.pb.cc  test.pb.h  test.proto
